src/parser/CmmParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;

import ast.*;
import ast.definition.*;
import ast.expression.*;
import ast.statement.*;
import ast.type.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CmmParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, ID=37, CHAR_CONSTANT=38, 
		ASCII_CHAR=39, REAL_CONSTANT=40, MANTISSA_AND_EXPONENT=41, FLOATING_POINT=42, 
		INT_CONSTANT=43, SKIP_CHARACTERS=44, ONE_LINE_COMMENT=45, MULTIPLE_LINE_COMMENT=46;
	public static final int
		RULE_program = 0, RULE_main = 1, RULE_definition = 2, RULE_functionDefinition = 3, 
		RULE_statement = 4, RULE_ifElse = 5, RULE_block = 6, RULE_expression = 7, 
		RULE_type = 8, RULE_returnType = 9, RULE_builtIn = 10, RULE_recordFields = 11, 
		RULE_functionInvocation = 12, RULE_parameters = 13, RULE_arguments = 14, 
		RULE_varDefinition = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "main", "definition", "functionDefinition", "statement", "ifElse", 
			"block", "expression", "type", "returnType", "builtIn", "recordFields", 
			"functionInvocation", "parameters", "arguments", "varDefinition"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'void'", "'main'", "'('", "')'", "'{'", "';'", "'}'", "'return'", 
			"'while'", "'='", "'write'", "','", "'read'", "'if'", "'else'", "'['", 
			"']'", "'.'", "'-'", "'!'", "'*'", "'/'", "'%'", "'+'", "'>'", "'>='", 
			"'<'", "'<='", "'!='", "'=='", "'&&'", "'||'", "'struct'", "'int'", "'double'", 
			"'char'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "CHAR_CONSTANT", "ASCII_CHAR", "REAL_CONSTANT", "MANTISSA_AND_EXPONENT", 
			"FLOATING_POINT", "INT_CONSTANT", "SKIP_CHARACTERS", "ONE_LINE_COMMENT", 
			"MULTIPLE_LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CmmParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Program ast;
		public List<Definition> defs = new ArrayList<Definition>();;
		public DefinitionContext d;
		public MainContext main;
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CmmParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(32);
					((ProgramContext)_localctx).d = definition();
					 ((ProgramContext)_localctx).d.ast.stream().forEach(temp ->
					                                           _localctx.defs.add(temp));    
					}
					} 
				}
				setState(39);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(40);
			((ProgramContext)_localctx).main = main();
			setState(41);
			match(EOF);
			 _localctx.defs.add(((ProgramContext)_localctx).main.ast); 
			 ((ProgramContext)_localctx).ast =  new Program(0,0, _localctx.defs); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<Statement> sts = new ArrayList<Statement>();
		public Token x;
		public VarDefinitionContext v;
		public StatementContext s;
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			((MainContext)_localctx).x = match(T__0);
			setState(46);
			match(T__1);
			setState(47);
			match(T__2);
			setState(48);
			match(T__3);
			setState(49);
			match(T__4);
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 128849018880L) != 0) {
				{
				{
				setState(50);
				((MainContext)_localctx).v = varDefinition();
				 _localctx.sts.addAll(((MainContext)_localctx).v.ast); 
				setState(52);
				match(T__5);
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 10307923110664L) != 0) {
				{
				{
				setState(59);
				((MainContext)_localctx).s = statement();
				 _localctx.sts.addAll(((MainContext)_localctx).s.ast); 
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(T__6);
			 ((MainContext)_localctx).ast =  new FunctionDefinition(((MainContext)_localctx).x.getLine(),
			                                    ((MainContext)_localctx).x.getCharPositionInLine()+1,
			                                    new FunctionType(((MainContext)_localctx).x.getLine(),
			                                                     ((MainContext)_localctx).x.getCharPositionInLine()+1,
			                                                     new VoidType(((MainContext)_localctx).x.getLine(), ((MainContext)_localctx).x.getCharPositionInLine()+1),
			                                                     new ArrayList<VarDefinition>()),

			                                    "main",
			                                    _localctx.sts); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public List<Definition> ast = new ArrayList<Definition>();
		public VarDefinitionContext v;
		public FunctionDefinitionContext functionDefinition;
		public VarDefinitionContext varDefinition() {
			return getRuleContext(VarDefinitionContext.class,0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return getRuleContext(FunctionDefinitionContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_definition);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				((DefinitionContext)_localctx).v = varDefinition();
				setState(71);
				match(T__5);
				 ((DefinitionContext)_localctx).v.ast.stream().forEach(
				                                        temp -> _localctx.ast.add(new VarDefinition(temp.getLine(), temp.getColumn(), temp.type, temp.name))); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74);
				((DefinitionContext)_localctx).functionDefinition = functionDefinition();
				 _localctx.ast.add(((DefinitionContext)_localctx).functionDefinition.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDefinitionContext extends ParserRuleContext {
		public FunctionDefinition ast;
		public List<Statement> sts = new ArrayList<Statement>();
		public ReturnTypeContext t;
		public Token ID;
		public ArgumentsContext a;
		public VarDefinitionContext v;
		public StatementContext s;
		public TerminalNode ID() { return getToken(CmmParser.ID, 0); }
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public List<VarDefinitionContext> varDefinition() {
			return getRuleContexts(VarDefinitionContext.class);
		}
		public VarDefinitionContext varDefinition(int i) {
			return getRuleContext(VarDefinitionContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			((FunctionDefinitionContext)_localctx).t = returnType();
			setState(80);
			((FunctionDefinitionContext)_localctx).ID = match(ID);
			setState(81);
			match(T__2);
			setState(82);
			((FunctionDefinitionContext)_localctx).a = arguments();
			setState(83);
			match(T__3);
			setState(84);
			match(T__4);
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 128849018880L) != 0) {
				{
				{
				setState(85);
				((FunctionDefinitionContext)_localctx).v = varDefinition();
				 _localctx.sts.addAll(((FunctionDefinitionContext)_localctx).v.ast); 
				setState(87);
				match(T__5);
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 10307923110664L) != 0) {
				{
				{
				setState(94);
				((FunctionDefinitionContext)_localctx).s = statement();
				 _localctx.sts.addAll(((FunctionDefinitionContext)_localctx).s.ast); 
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(T__6);
			 ((FunctionDefinitionContext)_localctx).ast =  new FunctionDefinition(((FunctionDefinitionContext)_localctx).t.ast.getLine(),
			                                    ((FunctionDefinitionContext)_localctx).t.ast.getColumn(),
			                                    new FunctionType(((FunctionDefinitionContext)_localctx).t.ast.getLine(), ((FunctionDefinitionContext)_localctx).t.ast.getColumn(), ((FunctionDefinitionContext)_localctx).t.ast, ((FunctionDefinitionContext)_localctx).a.ast),
			                                    (((FunctionDefinitionContext)_localctx).ID!=null?((FunctionDefinitionContext)_localctx).ID.getText():null),
			                                    _localctx.sts); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public List<Statement> ast = new ArrayList<Statement>();
		public FunctionInvocationContext f;
		public ExpressionContext e1;
		public IfElseContext ifElse;
		public BlockContext b1;
		public ExpressionContext e2;
		public FunctionInvocationContext functionInvocation() {
			return getRuleContext(FunctionInvocationContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public IfElseContext ifElse() {
			return getRuleContext(IfElseContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		int _la;
		try {
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				((StatementContext)_localctx).f = functionInvocation();
				setState(106);
				match(T__5);
				 _localctx.ast.add(((StatementContext)_localctx).f.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				match(T__7);
				setState(110);
				((StatementContext)_localctx).e1 = expression(0);
				setState(111);
				match(T__5);
				 _localctx.ast.add(new Return(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast)); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				((StatementContext)_localctx).ifElse = ifElse();
				 _localctx.ast.add(((StatementContext)_localctx).ifElse.ast); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(117);
				match(T__8);
				setState(118);
				match(T__2);
				setState(119);
				((StatementContext)_localctx).e1 = expression(0);
				setState(120);
				match(T__3);
				setState(121);
				((StatementContext)_localctx).b1 = block();
				 _localctx.ast.add(new While(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).b1.ast)); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(124);
				((StatementContext)_localctx).e1 = expression(0);
				setState(125);
				match(T__9);
				setState(126);
				((StatementContext)_localctx).e2 = expression(0);
				setState(127);
				match(T__5);
				 _localctx.ast.add(new Assignment(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast, ((StatementContext)_localctx).e2.ast)); 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(130);
				match(T__10);
				setState(131);
				((StatementContext)_localctx).e1 = expression(0);
				 _localctx.ast.add(new Print(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast)); 
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(133);
					match(T__11);
					setState(134);
					((StatementContext)_localctx).e2 = expression(0);
					 _localctx.ast.add(new Print(((StatementContext)_localctx).e2.ast.getLine(), ((StatementContext)_localctx).e2.ast.getColumn(), ((StatementContext)_localctx).e2.ast)); 
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(142);
				match(T__5);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(144);
				match(T__12);
				setState(145);
				((StatementContext)_localctx).e1 = expression(0);
				 _localctx.ast.add(new Input(((StatementContext)_localctx).e1.ast.getLine(), ((StatementContext)_localctx).e1.ast.getColumn(), ((StatementContext)_localctx).e1.ast)); 
				setState(153);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(147);
					match(T__11);
					setState(148);
					((StatementContext)_localctx).e2 = expression(0);
					 _localctx.ast.add(new Input(((StatementContext)_localctx).e2.ast.getLine(), ((StatementContext)_localctx).e2.ast.getColumn(), ((StatementContext)_localctx).e2.ast)); 
					}
					}
					setState(155);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(156);
				match(T__5);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfElseContext extends ParserRuleContext {
		public Statement ast;
		public ExpressionContext e1;
		public BlockContext b1;
		public BlockContext b2;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifElse; }
	}

	public final IfElseContext ifElse() throws RecognitionException {
		IfElseContext _localctx = new IfElseContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifElse);
		try {
			setState(176);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(T__13);
				setState(161);
				match(T__2);
				setState(162);
				((IfElseContext)_localctx).e1 = expression(0);
				setState(163);
				match(T__3);
				setState(164);
				((IfElseContext)_localctx).b1 = block();
				 ((IfElseContext)_localctx).ast =  new IfElse(((IfElseContext)_localctx).e1.ast.getLine(), ((IfElseContext)_localctx).e1.ast.getColumn(), ((IfElseContext)_localctx).e1.ast, ((IfElseContext)_localctx).b1.ast); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(167);
				match(T__13);
				setState(168);
				match(T__2);
				setState(169);
				((IfElseContext)_localctx).e1 = expression(0);
				setState(170);
				match(T__3);
				setState(171);
				((IfElseContext)_localctx).b1 = block();
				setState(172);
				match(T__14);
				setState(173);
				((IfElseContext)_localctx).b2 = block();
				 ((IfElseContext)_localctx).ast =  new IfElse(((IfElseContext)_localctx).e1.ast.getLine(), ((IfElseContext)_localctx).e1.ast.getColumn(), ((IfElseContext)_localctx).e1.ast, ((IfElseContext)_localctx).b1.ast, ((IfElseContext)_localctx).b2.ast); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
